<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/address_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/address_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:contentDescription="@string/qr_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_title"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/address_image"
            app:layout_constraintTop_toTopOf="@id/address_image"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/balance_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_image" />

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/purple_500"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_title"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/unconfirmed_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/unconfirmed_balance"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_text" />

        <TextView
            android:id="@+id/unconfirmed_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/unconfirmed_balance_title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/final_balance_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="6dp"
            android:text="@string/final_balance"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/final_balance_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unconfirmed_balance_title" />

        <TextView
            android:id="@+id/final_balance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/final_balance_title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@tools:sample/lorem" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:elevation="2dp"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
